--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 							<h2 style="font-family: 'Nanum Myeongjo',serif;">ODEUR</h2>
 							<div class="blog-metas">
 								<div class="blog-meta"><a href="https://seongunbae.github.io/odeur/" target="_blank">Website</a></div>							
-								<div class="blog-meta"><a href="blog_sub/guide/index.html">BI/BX guide</a></div>
-								<div class="blog-meta"><a href="blog_sub/web_guide/index.html">Web guide</a></div>
-								<div class="blog-meta"><a href="blog_sub/Ebook/samples/basic/index.html">E-book</a></div>
-								<div class="blog-meta"><a href="blog_sub/movie/movie.html">Movie</a></div>								
+								<div class="blog-meta"><a href="blog_sub/guide/index.html" target="_blank">BI/BX guide</a></div>
+								<div class="blog-meta"><a href="blog_sub/web_guide/index.html" target="_blank">Web guide</a></div>
+								<div class="blog-meta"><a href="blog_sub/Ebook/samples/basic/index.html" target="_blank">E-book</a></div>
+								<div class="blog-meta"><a href="blog_sub/movie/movie.html" target="_blank">Movie</a></div>								
 							</div>
 							<p>자연친화적이며 일상 속 가장 나다운 향을 찾을 수 있는 비건 향 브랜드 입니다.</p>
 						</div>
