--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 								<div class="blog-meta"><a class="example-image-link" href="img/popup_slide/image-5.jpg" data-lightbox="example-set" data-title="" target="_blank">작품3</a></div>						
 							</div>
 							Page end 
-							<p>모든 작업은 Photoshop과 Illustrator를 이용하여 제작하였습니다.</p>-->
+							<p>모든 작업은 Photoshop과 Illustrator를 이용하여 제작하였습니다.</p>
 						</div>
-					</div>
+					</div>-->
 				</div>
 			</div>
 			
