--- a/blog_sub/movie/movie.html
+++ b/blog_sub/movie/movie.html
@@ -24,7 +24,7 @@
 			webkit-playsinline="webkit-playsinline" playsinline="playsinline">
 			<source src="banner.mp4" type="video/mp4"></video></div>
 			<ul class="btn">				
-				<li><a href="../../index.html"><img src="../../img/back.png" alt="back"></a></li>
+				<li><a href="../../index.html" onclick="window.close()"><img src="images/back.png" alt="back"></a></li>
 			</ul>
 		</body>
 	</html>
