--- a/blog_sub/movie/movie.html
+++ b/blog_sub/movie/movie.html
@@ -23,8 +23,8 @@
 			<div><video muted="" preload="true" loop autoplay 
 			webkit-playsinline="webkit-playsinline" playsinline="playsinline">
 			<source src="banner.mp4" type="video/mp4"></video></div>
-			<ul class="btn">				
-				<li><a href="../../index.html" onclick="window.close()"><img src="images/back.png" alt="back"></a></li>
-			</ul>
+			<div class="btn">				
+				<a href="../../index.html" onclick="window.close()"><img src="images/back.png" alt="back"></a>
+			</div>
 		</body>
 	</html>
