--- a/blog_sub/movie/movie.html
+++ b/blog_sub/movie/movie.html
@@ -24,7 +24,7 @@
 			webkit-playsinline="webkit-playsinline" playsinline="playsinline">
 			<source src="banner.mp4" type="video/mp4"></video></div>
 			<div class="btn">				
-				<a href="../../index.html" onclick="window.close()"><img src="images/back.png" alt="back"></a>
+				<a href="../../index.html" onclick="window.close()"><img src="../../images/back.png" alt="back"></a>
 			</div>
 		</body>
 	</html>
