--- a/blog_sub/movie/movie.html
+++ b/blog_sub/movie/movie.html
@@ -9,14 +9,14 @@
 				body{max-width:1280px; margin:100px auto;
 					font-family: 'Nanum Gothic', sans-serif;}
 				div video{width:100%;}
-				ul{list-style-type:none;
+				.btn{list-style-type:none;
 					position:fixed;
 					right:5%; bottom:0;}
-				ul li{
+				.btn a{
 					text-align:center;
 					padding:5px 0;
 					margin-bottom:10px;}
-				ul li img{width:80%; opacity:100%;}
+				.btn a img{width:80%; opacity:100%;}
 			</style>
 		</head>
 		<body>			
