--- a/blog_sub/movie/movie.html
+++ b/blog_sub/movie/movie.html
@@ -11,7 +11,7 @@
 				div video{width:100%;}
 				ul{list-style-type:none;
 					position:fixed;
-					right:5%; bottom:0;}
+					right:90px; bottom:30px;}
 				ul li{
 					text-align:center;
 					padding:5px 0;
