--- a/blog_sub/Ebook/samples/basic/index.html
+++ b/blog_sub/Ebook/samples/basic/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 8 ]>    <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9 ]>    <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
-<title>배성운 E-BOOK</title>
+<title>E-book</title>
 <head>
 <meta name="viewport" content="width = 1050, user-scalable = no" />
 <script type="text/javascript" src="../../extras/jquery.min.1.7.js"></script>
