--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 						<p><span class="bold">Education</span><br>
 						2018.02 부산컴퓨터과학고등학교 졸업<br>2023.02 나래디자인학원 수료						
 						<p><span class="bold">경력사항</span><br>
-						2021.04~2022.04 임기제 부사관
+						2021.04~2022.04 임기제 부사관<br>
+					    	2023.06~ 엔타비글로벌(주) 근무중
 						<p><span class="bold">자격사항</span><br>2016.10 컴퓨터활용능력 2급<br>2016.10 전산회계 2급<br>2017.07 전산회계운용사 3급<br>2019.03 운전면허증 2종<br>2023.05 GTQ 1급</p>
 						<p><span class="bold">Skills & Tools</span></p>
 						<ul class="d_icon">						
