--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<h2 style="margin-top:10px;">About</h2>
 					<div class="about-info">						
 						<div class="profile"><img src="img/profile.png" alt="profile"></div>
-						<h2>안녕하세요.</h2>
+						<h2 style="text-align:left;">안녕하세요.</h2>
 						<p class="greeting">상세페이지 디자인, 웹사이트 제작 그리고 영상편집까지!<br>
 							비전공이지만 성실하고 끈기 있게 차곡차곡 실력을<br> 쌓아가며 노력하는 디자이너 배성운입니다.</p>
 						<p><span class="bold">생년월일</span><br>
