--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 						<div class="blog-content">
 							<h2>Artwork Design</h2>
 							<div class="blog-metas">							
-								<div class="blog-meta"><a class="example-image-link" href="img/popup_slide/image-3.jpg" data-lightbox="example-set" data-title="" target="_blank">작품1</a></div>
-								<div class="blog-meta"><a class="example-image-link" href="img/popup_slide/image-4.jpg" data-lightbox="example-set" data-title="" target="_blank">작품2</a></div>
-								<div class="blog-meta"><a class="example-image-link" href="img/popup_slide/image-5.jpg" data-lightbox="example-set" data-title="" target="_blank">작품3</a></div>						
+								<div class="blog-meta"><a class="example-image-link" href="img/berger.jpg" data-lightbox="example-set" data-title="" target="_blank">작품1</a></div>
+								<div class="blog-meta"><a class="example-image-link" href="img/marble.jpg" data-lightbox="example-set" data-title="" target="_blank">작품2</a></div>
+								<!--<div class="blog-meta"><a class="example-image-link" href="img/.jpg" data-lightbox="example-set" data-title="" target="_blank">작품3</a></div>-->						
 							</div>
 							Page end 
 							<p>모든 작업은 Photoshop과 Illustrator를 이용하여 제작하였습니다.</p>
