--- a/index.html
+++ b/index.html
@@ -119,7 +119,12 @@
 							<div class="blog-metas">							
 								<div class="blog-meta"><a class="example-image-link" href="img/berger.jpg" data-lightbox="example-set" data-title="" target="_blank">작품1</a></div>
 								<div class="blog-meta"><a class="example-image-link" href="img/marble.jpg" data-lightbox="example-set" data-title="" target="_blank">작품2</a></div>
-								<!--<div class="blog-meta"><a class="example-image-link" href="img/.jpg" data-lightbox="example-set" data-title="" target="_blank">작품3</a></div>-->						
+								<div class="blog-meta"><a class="example-image-link" href="img/icedraft.jpg" data-lightbox="example-set" data-title="" target="_blank">작품3</a></div>
+								<!--<div class="blog-meta"><a class="example-image-link" href="img/.jpg" data-lightbox="example-set" data-title="" target="_blank">작품4</a></div>
+								<div class="blog-meta"><a class="example-image-link" href="img/.jpg" data-lightbox="example-set" data-title="" target="_blank">작품5</a></div>
+								<div class="blog-meta"><a class="example-image-link" href="img/.jpg" data-lightbox="example-set" data-title="" target="_blank">작품6</a></div>
+								<div class="blog-meta"><a class="example-image-link" href="img/.jpg" data-lightbox="example-set" data-title="" target="_blank">작품7</a></div>
+								<div class="blog-meta"><a class="example-image-link" href="img/.jpg" data-lightbox="example-set" data-title="" target="_blank">작품8</a></div>-->
 							</div>
 							Page end 
 							<p>모든 작업은 Photoshop과 Illustrator를 이용하여 제작하였습니다.</p>
