--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						부산광역시 남구 홍곡로 360 112동 203호<br>(대연동,대연파크푸르지오) </p>
 						<p><span class="bold">연락처</span><br>
 						010-8391-2585<br><a class="e-mail" style="transition:all 0.5s;" href="https://nid.naver.com/nidlogin.login?url=https%3A%2F%2Fmail.naver.com%2F">tjddns134@naver.com</a></p>
-						<p><span class="bold">Education</span><br>
+						<p><span class="bold">학력사항</span><br>
 						2018.02 부산컴퓨터과학고등학교 졸업<br>2023.02 나래디자인학원 수료						
 						<p><span class="bold">경력사항</span><br>
 						2021.04~2022.04 임기제 부사관<br>
