--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								<div class="blog-meta"><a class="example-image-link" href="img/.jpg" data-lightbox="example-set" data-title="" target="_blank">작품7</a></div>
 								<div class="blog-meta"><a class="example-image-link" href="img/.jpg" data-lightbox="example-set" data-title="" target="_blank">작품8</a></div>-->
 							</div>
-							Page end 
+							<!--Page end--> 
 							<p>모든 작업은 Photoshop과 Illustrator를 이용하여 제작하였습니다.</p>
 						</div>
 					</div>
